# coredumper

./: .clang-format  .gitignore  CMakeLists.txt  Makefile.in  README.md  aclocal.m4  configure  configure.ac
examples/: tftpd.c
include/coredumper/: coredumper.h
include/google/: coredumper.h
src/: CMakeLists.txt  config.h.in  coredumper.c  coredumper_unittest.c  elfcore.c  elfcore.cc  elfcore.h  libcoredumper.sym  linux_syscall_support.h  linuxthreads.c  linuxthreads.cc  linuxthreads.h  thread_lister.c  thread_lister.h  utils.h
test/: CMakeLists.txt  coredumper_unittest.c  linux_syscall_support_unittest.cc
tool/: CMakeLists.txt  main.c
